src/test/compile-fail/unbalanced-comment.rs
./src/test/compile-fail/unbalanced-comment.rs:11:1:11:1: [1;31merror:[0m unterminated block comment
./src/test/compile-fail/unbalanced-comment.rs:11 }
                                                  ^
rt: ---
rt: f00e:main:main:                   upcall fail 'explicit failure', src/comp/syntax/parse/lexer.rs:153
rt: f00e:main:                        domain main @0x96ef04c root task failed
